# KNOXProtocol

./: .dockerignore  .gitignore  Cargo.toml  KNOXCudaNTTAccelerator.cu  README.md  WHITEPAPER.md  release-notes-v1.3.19.md  security.md  whitepaper.md
apps/knox-wallet-desktop/: main.js  package-lock.json  package.json  preload.js
apps/knox-wallet-desktop/.cargo/: config.toml
apps/knox-wallet-desktop/renderer/: bundle.js  index.html
apps/knox-wallet-desktop/renderer/src/: App.jsx  ErrorBoundary.jsx  main.jsx  styles.css
apps/knox-wallet-desktop/scripts/: build-renderer.mjs  compile-wix.mjs  ensure-build-icon.mjs  refresh-binaries.mjs  windows-dev-reset.ps1
crates/knox-consensus/: Cargo.toml
crates/knox-consensus/src/: lib.rs
crates/knox-core/: Cargo.toml
crates/knox-core/src/: async_impl.rs
crates/knox-crypto/: Cargo.toml
crates/knox-crypto/src/: hash.rs  lib.rs  pedersen.rs  range.rs  ring.rs  rng.rs  schnorr.rs  stealth.rs
crates/knox-keygen/: Cargo.toml
crates/knox-keygen/src/: main.rs
crates/knox-lattice/: Cargo.toml
crates/knox-lattice/benches/: lattice_bench.rs
crates/knox-lattice/src/: block.rs  coinbase.rs  commitment.rs  consensus_sig.rs  error.rs  governance.rs  immunity.rs  kernelcuda.cu  key_image.rs  knox_blake3.cuh  knox_gpu_miner.cu  knox_gpu_miner.ptx  lib.rs  mining.rs  params.rs  poly.rs  range_proof.rs  ring_sig.rs  sample.rs  stealth.rs  surge.rs  transaction.rs
crates/knox-lattice/tests/: commitment_test.rs  immunity_test.rs  integration_test.rs  poly_test.rs  range_proof_test.rs  ring_sig_test.rs  transaction_test.rs
crates/knox-ledger/: Cargo.toml
crates/knox-ledger/src/: lib.rs
crates/knox-node/: Cargo.toml
crates/knox-node/src/: main.rs
crates/knox-p2p/: Cargo.toml
crates/knox-p2p/src/: lib.rs
crates/knox-smoke/: Cargo.toml
crates/knox-smoke/src/: main.rs
crates/knox-storage/: Cargo.toml
crates/knox-storage/src/: lib.rs
crates/knox-types/: Cargo.toml
crates/knox-types/src/: lib.rs
crates/knox-wallet/: Cargo.toml
crates/knox-wallet-gui/: Cargo.toml
crates/knox-wallet-gui/src/: main.rs
crates/knox-wallet/src/: lib.rs  main.rs
crates/knox-walletd/: Cargo.toml
crates/knox-walletd/src/: main.rs
docker/: Dockerfile.gui  Dockerfile.node  README.md  docker-compose.linux.yml  entrypoint-gui.sh  entrypoint-node.sh
docs/: ANTI_COMPACT_MEMORY.md
scripts/: audit-live-6vm.sh  build-desktop.ps1  build-desktop.sh  build-installer.ps1  build-installer.sh  check-genesis-6vm.sh  check-mainnet-6vm.sh  check-miner-addr.sh  deploy-node-binary.sh  diag-6vm-services.sh  fix-6vm-services.sh  fix-diamond-auth-routing.sh  fix-genesis-hash.sh  force-diamond-auth-local.sh  gen-mainnet-11.sh  gen-node1-cloud-init.sh  gen-oracle-cloud-init-6vm.sh  gen-oracle-cloud-init.sh  gen-testnet.sh  hard-fix-diamond-auth.sh  make-icons.md  oci-build-public-ips-6vm.sh  oci-fix-ssh-ubuntu.sh  pin-genesis-6vm.sh  preflight-launch.sh  provision-6vm-over-ssh.sh  recover-6vm-launch.sh  redeploy.sh  regenerate-lattice-validators.sh  release-audit.ps1  release-desktop-and-images.ps1  release-secret-audit.sh  repair-diamond-auth-vms.sh  reseed-genesis-6vm.sh  scrub-for-publish.ps1  seed-ledger-6vm.sh  start-node.ps1  switch-diamond-auth-nodes.sh  testnet-bench.sh  testnet-true-stress.sh  (+4 more)
