[workspace]
members = [
  "crates/knox-types",
  "crates/knox-lattice",
  "crates/knox-consensus",
  "crates/knox-ledger",
  "crates/knox-storage",
  "crates/knox-p2p",
  "crates/knox-core",
  "crates/knox-node",
  "crates/knox-wallet",
  "crates/knox-walletd",
  "crates/knox-wallet-gui",
  "crates/knox-keygen",
  "crates/knox-smoke",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "1.3.1"

[workspace.dependencies]
blake3 = { version = "1", features = ["pure"] }
bincode = { version = "2", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros", "io-util"] }
chacha20poly1305 = { version = "0.10" }
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
getrandom = "0.2"
rand_chacha = "0.3"
rand_core = "0.6"

[workspace.metadata.knox]
name = "KNOX Protocol"

[profile.release-lite]
inherits = "release"
opt-level = 2
lto = "off"
codegen-units = 16
strip = "none"
