[package]
name = "knox-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
bincode.workspace = true
curve25519-dalek.workspace = true
rand_chacha.workspace = true
rand_core.workspace = true
getrandom.workspace = true
zeroize.workspace = true
