[package]
name = "knox-lattice"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
argon2.workspace = true
blake3.workspace = true
bincode.workspace = true
curve25519-dalek.workspace = true
knox-crypto = { path = "../knox-crypto" }
knox-types = { path = "../knox-types" }

[[bench]]
name = "lattice_bench"
harness = false
