[package]
name = "knox-lattice"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
bincode.workspace = true
getrandom.workspace = true
knox-types = { path = "../knox-types" }

[[bench]]
name = "lattice_bench"
harness = false
