[package]
name = "knox-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
bincode.workspace = true
knox-types = { path = "../knox-types" }
knox-crypto = { path = "../knox-crypto" }
knox-lattice = { path = "../knox-lattice" }
tokio.workspace = true
chacha20poly1305.workspace = true
