[package]
name = "knox-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true
autobins = false

[[bin]]
name = "knox-wallet-cli"
path = "src/main.rs"

[[bin]]
name = "genesis_export"
path = "src/bin/genesis_export.rs"

[[bin]]
name = "rpc_tip"
path = "src/bin/rpc_tip.rs"

[[bin]]
name = "genesis_decode"
path = "src/bin/genesis_decode.rs"

[dependencies]
bincode.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
argon2.workspace = true
zeroize.workspace = true
subtle.workspace = true
getrandom.workspace = true
knox-lattice = { path = "../knox-lattice" }
knox-types = { path = "../knox-types" }
