[package]
name = "knox-walletd"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
autobins = false

[[bin]]
name = "knox-wallet"
path = "src/main.rs"

[dependencies]
knox-wallet = { path = "../knox-wallet" }
knox-types = { path = "../knox-types" }
bincode = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio.workspace = true
tokio-rustls = "0.25"
rustls-pemfile = "2"
